--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
         <audio src="murica.mp3" autoplay loops></audio>
         <script type="text/template" id="boardTemplate">
-        <h1><% name %></h1>
+        <h1><%= boardName %></h1>
         <table>
             <% for (var i = 0; i < 10; i++) {
                 print('<tr>');
